# gakuyukai-gui

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yaml  universal-macos-app.yaml
docs/: dashboard-implementation-plan.md  macos-native-design-refactoring.md
docs/github_security_updates/: implementation_plan.md  task.md  walkthrough.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data_processing.rs  lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/gakuyukai-rates/: +page.svelte
test/: ダミーサークル1.xlsx  ダミーサークル2.xlsx  ダミーサークル3.xlsx  学友会名簿_ダミー.xlsx
