[package]
name = "gakuyukai-gui"
version = "0.1.1"
description = "学友会率計算アプリ"
authors = ["えぴた"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gakuyukai_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.2.1"
calamine = "0.26.1"
rust_xlsxwriter = "0.56.0"
clap = { version = "4.5.36", features = ["derive"] }
cli-table = "0.5.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
tauri-plugin-log = "2"
rayon = "1.10.0"
